--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -50,6 +50,7 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^4.9.4",
-    "solidity-docgen": "^0.6.0-beta.36"
+    "solidity-docgen": "^0.6.0-beta.36",
+    "dotenv": "^16.3.1"
   }
 }
