--- a/packages/periphery/package.json
+++ b/packages/periphery/package.json
@@ -37,6 +37,7 @@
     "@marginly/contracts-uniswap-mock": "^0.1.0",
     "@marginly/router": "^0.1.0",
     "@chainlink/contracts": "~0.8.0",
+    "@pythnetwork/pyth-sdk-solidity": "^2.3.0",
     "mocha-chai-jest-snapshot": "^1.1.4",
     "chai": "^4.3.7",
     "ethers": "^5.7.2",
