--- a/packages/oracle/package.json
+++ b/packages/oracle/package.json
@@ -32,6 +32,7 @@
     "yargs": "^13.3.2",
     "node-fetch": "^2.6.9",
     "ethers": "^5.7.2",
-    "async-mutex": "^0.4.0"
+    "async-mutex": "^0.4.0",
+    "dotenv": "^16.3.1"
   }
 }
