--- a/packages/deploy/src/data/deploy/x1-testnet/config.json
+++ b/packages/deploy/src/data/deploy/x1-testnet/config.json
@@ -26,6 +26,13 @@
       "name": "USD Coin",
       "symbol": "USDC",
       "decimals": 6
+    },
+    {
+      "type": "mintable",
+      "id": "fokb",
+      "name": "Fake Wrapped OKB",
+      "symbol": "FOKB",
+      "decimals": 18
     }
   ],
   "prices": [
@@ -35,6 +42,13 @@
       "type": "http-get",
       "direction": "forward",
       "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=ETHUSDC).price"
+    },
+    {
+      "id": "okb-usdc",
+      "label": "okb/usdc",
+      "type": "http-get",
+      "direction": "forward",
+      "query": "json(https://www.okx.com/api/v5/market/ticker?instId=OKB-USDC).data[0].last"
     }
   ],
   "uniswap": {
@@ -52,6 +66,16 @@
         "tokenBBalance": "2_000_000_000_000",
         "priceId": "eth-usdc",
         "priceBaseTokenId": "fweth"
+      },
+      {
+        "id": "fokb-usdc",
+        "tokenAId": "fokb",
+        "tokenBId": "usdc",
+        "fee": "0.1%",
+        "tokenABalance": "1_000_000_000",
+        "tokenBBalance": "2_000_000_000_000",
+        "priceId": "okb-usdc",
+        "priceBaseTokenId": "fokb"
       }
     ]
   },
@@ -76,6 +100,22 @@
         "positionMinAmount": "0.001",
         "quoteLimit": "100_000_000"
       }
+    },
+    {
+      "id": "fokb-usdc",
+      "uniswapPoolId": "fokb-usdc",
+      "baseTokenId": "fokb",
+      "params": {
+        "interestRate": "5.4%",
+        "maxLeverage": "20",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "mcSlippage": "5.0%",
+        "priceAgo": "15 min",
+        "priceAgoMC": "1 min",
+        "positionMinAmount": "0.01",
+        "quoteLimit": "100_000_000"
+      }
     }
   ],
   "adapters": [
@@ -87,6 +127,11 @@
           "tokenAId": "fweth",
           "tokenBId": "usdc",
           "poolAddress": "0x73956b3b0c279e9cF2700F91B2e48E4eC0C8F281"
+        },
+        {
+          "tokenAId": "fokb",
+          "tokenBId": "usdc",
+          "poolAddress": "0x6e66CCF9B75629755b3D7c32390EB4A248Ff539E"
         }
       ]
     }
