algebra adapter deployment

--- a/packages/deploy/src/data/deploy/arbitrum/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum/config.json
@@ -347,6 +347,27 @@
           "poolAddress": "0xee5f2e39d8abf28e449327bfd44317fc500eb4d8"
         }
       ]
+    },
+    {
+      "dexId": 11,
+      "adapterName": "AlgebraAdapter",
+      "pools": [
+        {
+          "tokenAId": "wbtc",
+          "tokenBId": "weth",
+          "poolAddress": "0xd845f7D4f4DeB9Ff5bCf09D140Ef13718F6f6C71"
+        },
+        {
+          "tokenAId": "weth",
+          "tokenBId": "usdc-native",
+          "poolAddress": "0xB1026b8e7276e7AC75410F1fcbbe21796e8f7526"
+        },
+        {
+          "tokenAId": "arb",
+          "tokenBId": "usdc-native",
+          "poolAddress": "0xfaE2AE0a9f87FD35b5b0E24B47BAC796A7EEfEa1"
+        }
+      ]
     }
   ],
   "marginlyKeeper": {
