--- a/packages/deploy/src/data/deploy/arbitrum-sepolia-v1.5/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum-sepolia-v1.5/config.json
@@ -376,13 +376,7 @@
       }
     }
   ],
-  "adapters": [
-    {
-      "dexId": 0,
-      "adapterName": "UniswapV3Adapter",
-      "pools": []
-    }
-  ],
+  "adapters": [],
   "marginlyKeeper": {
     "aavePoolAddressesProvider": {
       "allowCreateMock": "true"
