update pool mock id

--- a/packages/oracle/config.json
+++ b/packages/oracle/config.json
@@ -481,7 +481,7 @@
           "periodMs": 60000
         },
         {
-          "poolMockId": "btc-usdc",
+          "poolMockId": "wbtc-usdc",
           "periodMs": 60000
         },
         {
