--- a/packages/oracle/config.json
+++ b/packages/oracle/config.json
@@ -395,7 +395,7 @@
       "id": "blastSepolia",
       "tickMs": 1000,
       "ethereum": {
-        "nodeUrl": "https://sepolia.blast.io"
+        "nodeUrl": "https://blast-sepolia.blockpi.network/v1/rpc/public"
       },
       "tokens": [
         {
