--- a/packages/periphery/package.json
+++ b/packages/periphery/package.json
@@ -12,6 +12,7 @@
     "compile": "hardhat compile",
     "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/*.spec.ts",
     "test:coverage": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat coverage  --testfiles './test/*.spec.ts'",
+    "test:int": "REPORT_GAS=true hardhat test --config hardhat-fork.config.ts ./test/int/*.spec.ts",
     "lint:write": "prettier --write ./contracts ./test",
     "docgen": "hardhat docgen"
   },
@@ -33,6 +34,7 @@
     "@uniswap/v3-core": "^1.0.1",
     "@uniswap/v3-periphery": "^1.4.3",
     "@uniswap/snapshot-gas-cost": "^1.0.0",
+    "@cryptoalgebra/v1.9-core": "^1.0.0",
     "@marginly/contracts": "^0.1.0",
     "@marginly/contracts-uniswap-mock": "^0.1.0",
     "@marginly/router": "^0.1.0",
@@ -50,6 +52,7 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^4.9.4",
-    "solidity-docgen": "^0.6.0-beta.36"
+    "solidity-docgen": "^0.6.0-beta.36",
+    "bignumber.js": "^9.1.1"
   }
 }
