add gasPrice option

--- a/packages/keeper/config/config.arbitrum-one.json
+++ b/packages/keeper/config/config.arbitrum-one.json
@@ -4,7 +4,8 @@
   },
   "connection": {
     "ethOptions": {
-      "gasLimit": 4400000
+      "gasLimit": 4400000,
+      "gasPrice": "200000000"
     }
   },
   "marginlyKeeperAddress": "0x193E76C78e1c02BF35c1F789Ce2a1aE39F865629",
