--- a/packages/keeper/config/config.example.json
+++ b/packages/keeper/config/config.example.json
@@ -5,6 +5,7 @@
   "connection": {
     "ethOptions": {}
   },
+  "operatingMode": "liquidation",
   "marginlyKeeperAddress": "0x13d1bD42884585d0D00121E596b3733B47152FeB",
   "marginlyPools": [
     {
