--- a/packages/keeper/config/config.arbitrum-goerli.json
+++ b/packages/keeper/config/config.arbitrum-goerli.json
@@ -7,6 +7,7 @@
       "gasLimit": 900000
     }
   },
+  "operatingMode": "liquidation",
   "marginlyKeeperAddress": "0x258Dad63c47efeDc807158dF9f59CfB1eaf606Aa",
   "marginlyPools": [
     {
