--- a/packages/keeper/config/config.polygon-mumbai.json
+++ b/packages/keeper/config/config.polygon-mumbai.json
@@ -7,6 +7,7 @@
       "gasLimit": 900000
     }
   },
+  "operatingMode": "liquidation",
   "marginlyKeeperAddress": "0x03bDDd499ecb0E5AF7373ed774b2AC75CF5880aD",
   "marginlyPools": [
     {
