add conditions for bast

--- a/.github/workflows/build-and-deploy-keeper.yml
+++ b/.github/workflows/build-and-deploy-keeper.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - 'keeper-releases'
+      - 'keeper-releases-*'
     tags:
       - 'v*'
 
@@ -55,6 +56,7 @@ jobs:
   
  
   deployment-blast:
+    if: github.ref != 'refs/heads/keeper-releases'
     needs: build-image
     runs-on: 'ubuntu-latest'
     environment: production
