--- a/packages/keeper/package.json
+++ b/packages/keeper/package.json
@@ -20,6 +20,7 @@
     "@marginly/logger": "^1.0.0",
     "@marginly/logger-node": "^1.0.0",
     "@aave/core-v3": "^1.18.0",
+    "@uniswap/v3-core": "^1.0.1",
     "commander": "^8.1.0",
     "ethers": "^5.7.2",
     "dotenv": "^16.3.1"
