--- a/packages/periphery/package.json
+++ b/packages/periphery/package.json
@@ -9,10 +9,11 @@
     "typechain-types"
   ],
   "scripts": {
-    "compile": "hardhat compile",
-    "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/*.spec.ts",
-    "test:coverage": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat coverage  --testfiles './test/*.spec.ts'",
-    "test:int": "REPORT_GAS=true hardhat test --config hardhat-fork.config.ts ./test/int/*.spec.ts",
+    "compile": "hardhat compile --config ./hardhat-configs/hardhat.config.ts",
+    "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/*.spec.ts --config ./hardhat-configs/hardhat.config.ts",
+    "test:coverage": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat coverage --testfiles './test/*.spec.ts'",
+    "test:int": "REPORT_GAS=true hardhat test --config ./hardhat-configs/fork.config.ts ./test/int/others/*.spec.ts",
+    "test:int:pendle-before-maturity": "REPORT_GAS=true hardhat test --config ./hardhat-configs/fork-pendle-before-maturity.config.ts ./test/int/pendle/PendleOracle-before-maturity.spec.ts",
     "lint:write": "prettier --write ./contracts ./test",
     "docgen": "hardhat docgen"
   },
