--- a/packages/periphery/package.json
+++ b/packages/periphery/package.json
@@ -12,8 +12,7 @@
     "compile": "hardhat compile --config ./hardhat-configs/hardhat.config.ts",
     "test": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat test ./test/*.spec.ts --config ./hardhat-configs/hardhat.config.ts",
     "test:coverage": "UPDATE_SNAPSHOT=1 REPORT_GAS=true hardhat coverage --testfiles './test/*.spec.ts'",
-    "test:int": "REPORT_GAS=true hardhat test --config ./hardhat-configs/fork.config.ts ./test/int/others/*.spec.ts",
-    "test:int:pendle": "REPORT_GAS=true hardhat test --config ./hardhat-configs/fork-pendle.config.ts ./test/int/pendle/PendleOracle.spec.ts",
+    "test:int": "REPORT_GAS=true hardhat test --config ./hardhat-configs/fork.config.ts ./test/int/**/*.spec.ts",
     "lint:write": "prettier --write ./contracts ./test",
     "docgen": "hardhat docgen"
   },
